BUG,UBY: _static/css/custom.css: div.body p { word-wrap: break-word }

--- a/docs/_static/css/local.css
+++ b/docs/_static/css/local.css
@@ -49,7 +49,8 @@ div.body h1 {
     padding-bottom: 10px;
 }
 
-div.body a {
+div.body a,
+div.body p {
     word-wrap: break-word;
 }
 
